# logc

./: README.md  main.py  pyproject.toml  requirements.txt  tokenization.py  vectorization.py
.github/workflows/: build.yaml  publish-to-pypi.yaml
logpat/: cli.py  tokenization.py
logsviewer/src/app/: index.tsx  style.scss
old-code/: requirements.txt  vectorization.py
old-code/logsviewer/: index.html  package-lock.json  package.json  tsconfig.json
old-code/logsviewer/src/app/: style.scss
pat/: cli.py  vectorization.py
pat_cli/: args.py  main.py  tokenization.py
pypat/: cli.py
