[tool.poetry]
name = "pat-cli"
version = "0.1.0"
description = ""
authors = ["Rafid Al-Humaimidi <rafidka@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pat = "pat_cli.main:main"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fasttext = "^0.9.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
